upload chat module (bugged)
